@@ -104,6 +104,11 @@ class WC_Stripe_Payment_Request {
 			return;
 		}
 
+		// Don't load for switch subscription page.
+		if ( isset( $_GET['switch-subscription'] ) ) {
+			return;
+		}
+
 		$this->init();
 	}
 
