@@ -5,6 +5,7 @@
 * Tweak - Standardize ECE Express payment buttons on Pay for Order page to match cart and checkout itemization behavior.
 * Tweak - Remove duplicate notice about the new checkout experience.
 * Fix - Fix ECE modal not loading on pay for order page when coupon is applied.
+* Fix - Do not load express payment buttons on switch subscription page.
 * Fix - Return 'is_live' as true in account summary response when test mode is disabled in gateway settings and charge is enabled in Stripe account.
 
 = 8.9.0 - 2024-11-14 =
